V3 Interaction Pattern Improvements and Docs (#173)
* Docs corner dialog (#165)

* breaking improvements and docs corner dialog

* minor copy update

* docs and bbreaking improvements (#167)

* label change

* Improves Popover, Positioner, Overlay and Side Sheet (#169)

* Adding some docs for evergreen's Autocomplete (#162)

* adding eslint for IDE && initial commit

* Adding all default exapmples

* fix lint

* default export

* package

* marker

* Adding some more options

* Adding proptypes explanation

* fixing textProps

* remove children

* Adressing comments from @jeroenransijn

* adding emdash

* Update

* Docs corner dialog (#165)

* breaking improvements and docs corner dialog

* minor copy update

* docs and bbreaking improvements (#167)

* label change

* improvements positioner, popover  and tooltip

* update Autocomplete and Combobox

* improved positioner

* improved components

* unify system (#168)

* Focus support dialog (#170)

* improved focus management dialog

* focus management docs dialog

* tooltip docs (#171)

* tooltip docs

* improve tooltip + links

* combobox docs (#172)

* export Position

* remove old readmes

* Docs radio (breaking change) (#177)

* segmented control docs (#176)

* radio docs

* is required prop

* doc text

* improved focus handling (#178)

* fix rowno comments

* added isInvalid back to radio

* default position prop tooltip

* 3.0.0

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "evergreen-ui",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "🌲 React UI Kit by Segment 🌲",
   "contributors": [
-    "Jeroen Ransijn (https://twitter.com/jeroen_ransijn)",
+    "Jeroen Ransijn (https://jssr.design/)",
     "Roland Warmerdam (https://roland.codes)"
   ],
   "keywords": ["evergreen", "segment", "ui", "react"],
@@ -39,6 +39,7 @@
     "downshift": "^1.16.0",
     "fuzzaldrin-plus": "^0.6.0",
     "glamor": "^2.20.40",
+    "lodash.debounce": "^4.0.8",
     "lodash.mapvalues": "^4.6.0",
     "object-values": "^1.0.0",
     "prop-types": "^15.0.0",
