--- a/src/autocomplete/docs/examples/default-basic.example
+++ b/src/autocomplete/docs/examples/default-basic.example
@@ -4,10 +4,9 @@
   items={items}
 >
   {(props) => {
-    const { key, getInputProps, getRef, inputValue } = props
+    const { getInputProps, getRef, inputValue } = props
     return (
       <TextInput
-        key={key}
         placeholder="Starwars names"
         value={inputValue}
         innerRef={getRef}
