--- a/src/autocomplete/docs/examples/onFocus-basic.example
+++ b/src/autocomplete/docs/examples/onFocus-basic.example
@@ -2,9 +2,8 @@
   onChange={(changedItem) => console.log(changedItem)}
   items={items}
 >
-  {({ key, getInputProps, getRef, openMenu, inputValue }) => (
+  {({ getInputProps, getRef, openMenu, inputValue }) => (
     <TextInput
-      key={key}
       placeholder="Open on focus"
       value={inputValue}
       innerRef={ref => getRef(ref)}
