--- a/src/select-menu/docs/examples/SelectMenu-multi.example
+++ b/src/select-menu/docs/examples/SelectMenu-multi.example
@@ -1,30 +1,3 @@
-import { storiesOf } from '@storybook/react'
-import arrify from 'arrify'
-import React from 'react'
-import Box from 'ui-box'
-import options from '../docs/starwars-options'
-import Manager from '../docs/Manager'
-import { SelectMenu } from '../../select-menu'
-import { Button } from '../../buttons'
-
-storiesOf('select-menu', module).add('SelectMenu', () => (
-  <Box padding={40}>
-    {(() => {
-      document.body.style.margin = '0'
-      document.body.style.height = '100vh'
-    })()}
-    <Manager>
-      {({ setState, state }) => (
-        <SelectMenu
-          title="Select name"
-          options={options}
-          selected={state.selected}
-          onSelect={item => setState({ selected: item.value })}
-        >
-          <Button>{state.selected || 'Select name...'}</Button>
-        </SelectMenu>
-      )}
-    </Manager>
     <Manager>
       {({ setState, state }) => (
         <SelectMenu
@@ -43,10 +16,11 @@ storiesOf('select-menu', module).add('SelectMenu', () => (
             let selectedNames = ''
             if (selectedItemsLength === 0) {
               selectedNames = ''
-            } else if (selectedItemsLength === 1) {
+            }
+            else if (selectedItemsLength === 1) {
               selectedNames = selectedItems.toString()
-            } else if (selectedItemsLength > 1) {
-              selectedNames = selectedItemsLength.toString() + ' selected...'
+            } else if (selectedItemsLength > 1 ) {
+              selectedNames = selectedItemsLength.toString() + " selected..."
             }
             setState({
               selected,
@@ -62,10 +36,11 @@ storiesOf('select-menu', module).add('SelectMenu', () => (
             let selectedNames = ''
             if (selectedItemsLength === 0) {
               selectedNames = ''
-            } else if (selectedItemsLength === 1) {
+            }
+            else if (selectedItemsLength === 1) {
               selectedNames = selectedItems.toString()
-            } else if (selectedItemsLength > 1) {
-              selectedNames = selectedItemsLength.toString() + ' selected...'
+            } else if (selectedItemsLength > 1 ) {
+              selectedNames = selectedItemsLength.toString() + " selected..."
             }
             setState({ selected: selectedItems, selectedNames })
           }}
@@ -74,5 +49,3 @@ storiesOf('select-menu', module).add('SelectMenu', () => (
         </SelectMenu>
       )}
     </Manager>
-  </Box>
-))
