Migrate to circleci 2.0

--- a/.storybook/static/.circleci/config.yml
+++ b/.storybook/static/.circleci/config.yml
@@ -1,5 +1,7 @@
 # Stops CircleCI from running on the gh-pages branch when the docs deploy
-general:
-  branches:
-    ignore:
-      - gh-pages
+version: 2
+jobs:
+  noop:
+    branches:
+      ignore:
+        - gh-pages
