Show runtime warnings only once (#422)
Follow up to https://github.com/segmentio/evergreen/pull/415.

Turns out `warning` package didn't have functionality to show same warning only once. And turns out it's much easier to just write our own implementation which does that.

--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "react-tiny-virtual-list": "^2.1.4",
     "react-transition-group": "^2.5.0",
     "tinycolor2": "^1.4.1",
-    "ui-box": "^1.4.0",
-    "warning": "^4.0.2"
+    "ui-box": "^1.4.0"
   },
   "peerDependencies": {
     "react": "^16.3.0",
