add Matt Shwery as a package collaborator

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "🌲 React UI Kit by Segment 🌲",
   "contributors": [
     "Jeroen Ransijn (https://jssr.design/)",
-    "Roland Warmerdam (https://roland.codes)"
+    "Roland Warmerdam (https://roland.codes)",
+    "Matt Shwery (https://mattshwery.com)"
   ],
   "keywords": [
     "evergreen",
