--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@storybook/addon-options": "^3.4.11",
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "^3.4.11",
-    "ava": "1.0.0-rc.1",
+    "ava": "^1.3.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-add-react-displayname": "^0.0.5",
@@ -100,10 +100,10 @@
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
     "sinon": "^7.0.0",
-    "size-limit": "^0.20.1",
+    "size-limit": "^0.21.1",
     "starwars-names": "^1.6.0",
     "url-loader": "^1.1.2",
-    "xo": "^0.23.0"
+    "xo": "^0.24.0"
   },
   "xo": {
     "parser": "babel-eslint",
