Adding canonical urls to evergreen docs (#528)
Our evergreen docs currently have no canonical urls (😞), so here's a PR to implement `gatsby-plugin-canonical-urls` :) 

![image](https://user-images.githubusercontent.com/952992/54789691-8c531480-4bf0-11e9-964a-73779f054ab3.png)

--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,7 @@
     "fuzzaldrin-plus": "^0.6.0",
     "gatsby": "^2.0.8",
     "gatsby-mdx": "^0.1.4",
+    "gatsby-plugin-canonical-urls": "^2.0.12",
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-postcss": "^1.0.0",
     "gatsby-plugin-react-helmet": "next",
